syntax = "proto3";

package s3image;

option go_package = "./pb/s3image";

service Imagetransporter {
    rpc ImageUpload (ImageUpoadRequest) returns (Message) {}
    rpc ImageStreamUpload (stream ImageUpoadRequest) returns (Message) {}
    rpc ImageDownload (ImageDownloadRequest) returns (ImageDownloadReplay) {}
}

message ImageUpoadRequest {
    bytes image = 1;
    string name = 2;
}

message Message {
    string message = 1;
}

message ImageDownloadRequest {
    string name = 1;
    bool isresize = 2;
    int64 rewidth = 3;
    int64 reheight = 4;
}

message ImageDownloadReplay {
    bytes image = 1;
}
